--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: "Siwei's Blog"
-author: "Siwei Meng"
-description: "Feel free to contact." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+author: "Swee"
+description: "Hi." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "siweim@unr.edu"
 github_username: "mengsiwei"
-linkedin_username: "Siwei (Swee) Meng"
+linkedin_username: "Siwei Meng"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
