--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "Hi." # This will show up in places like twitter, linkedin, etc, if
 # All of these are optional and can be removed or commented out
 email: "siweim@unr.edu"
 github_username: "mengsiwei"
-linkedin_username: "Siwei Meng"
+linkedin_username: "mengsiwei"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
