--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Siwei's Blog"
+title: "Swee's Blog"
 author: "Swee"
 description: "Hi." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
@@ -39,3 +39,5 @@ defaults:
       type: post
     values:
       tags: Other
+
+cv_url: "assets/CV/"
