--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: "Hi." # This will show up in places like twitter, linkedin, etc, if
 email: "siweim@unr.edu"
 github_username: "mengsiwei"
 linkedin_username: "mengsiwei"
+google_scholar: "Siwei Meng"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
