--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Hi." # This will show up in places like twitter, linkedin, etc, if
 email: "siweim@unr.edu"
 github_username: "mengsiwei"
 linkedin_username: "mengsiwei"
-google_scholar: "Siwei Meng"
+googlescholar_username: "7eJfbpQAAAAJ"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
