add linux tips post

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ social_links:
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
 #########################################################################################
 theme: "minima"
+markdown: kramdown
 
 # rss: rss
 
